Added flag skill tree